--- a/deployments/common/crds-v1beta1/k8s.nginx.org_transportservers.yaml
+++ b/deployments/common/crds-v1beta1/k8s.nginx.org_transportservers.yaml
@@ -49,14 +49,14 @@ spec:
                   type: string
                 protocol:
                   type: string
+            server-snippets:
+              type: string
             sessionParameters:
               description: SessionParameters defines session parameters.
               type: object
               properties:
                 timeout:
                   type: string
-            snippets:
-              type: string
             upstreamParameters:
               description: UpstreamParameters defines parameters for an upstream.
               type: object
