--- a/deployments/common/crds-v1beta1/k8s.nginx.org_transportservers.yaml
+++ b/deployments/common/crds-v1beta1/k8s.nginx.org_transportservers.yaml
@@ -49,7 +49,7 @@ spec:
                   type: string
                 protocol:
                   type: string
-            server-snippets:
+            serverSnippets:
               type: string
             sessionParameters:
               description: SessionParameters defines session parameters.
